form and overflow fixed

--- a/Task2/task2.css
+++ b/Task2/task2.css
@@ -9,6 +9,7 @@
 }
 
 body {
+	overflow: hidden;
 	background-color: #e4eef3;
 	padding: 0;
 	margin: 0;
@@ -121,11 +122,12 @@ body {
 }
 
 .main {
+	overflow: auto;
 	background-image: url(images/helping.png);
 	background-size: contain;
 	background-repeat: no-repeat;
 	background-position: left;
-	background-color: #192a32;
+
 	position: relative;
 	grid-area: main;
 	padding: 20px;
@@ -133,6 +135,7 @@ body {
 	justify-content: center;
 	align-items: center;
 	flex-direction: column;
+	background-color: #192a32;
 }
 ::selection {
 	background-color: rgb(250, 250, 151);
@@ -165,7 +168,7 @@ body {
 }
 
 .footer {
-	padding: 30px 0;
+	padding: 10px 0;
 	grid-area: footer;
 	line-height: 1.5;
 	text-align: center;
@@ -195,11 +198,19 @@ body {
 }
 
 #form input,
-#form button,
-textarea {
+#form textarea {
+	margin-bottom: 10px;
 	width: 90%;
 	border-radius: 5px;
 	padding: 5px;
+	width: 300px;
+	background-color: transparent !important;
+	color: #8b9498;
+	border: 1px solid #8b9498;
+	font-family: Roboto;
+	font-weight: 300;
+	font-size: 15px;
+	padding: 7px;
 }
 #form input,
 button {
@@ -209,29 +220,33 @@ button {
 	background-color: #5796b5;
 }
 #form button {
+	width: 300px;
+	margin: 0;
+	padding: 7px;
+	border: 1px solid #8b9498;
+	font-family: Roboto;
+	font-weight: 300;
+	font-size: 15px;
 	background-color: #80afc7;
-	color: white;
-	border-color: white;
+	color: #fff;
+	text-shadow: none;
+	border-radius: 5px;
 }
 #form input:focus,
 textarea:focus {
 	background-color: rgb(155, 151, 151);
 	color: white;
 }
-#form input,
-textarea {
-	background-color: transparent;
-	border-color: white;
-	margin-bottom: 8px;
-}
+
 .image {
 	flex: auto;
 }
 #form textarea {
-	display: block;
-	max-width: 90%;
-	height: 90px;
+	max-height: 100px;
+	min-height: 100px;
 	resize: none;
+	background-color: transparent !important;
+	color: #8b9498;
 }
 .footer h4 {
 	color: white;
